--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -1,2 +1,56 @@
-<h1>Bugs#index</h1>
-<p>Find me in app/views/bugs/index.html.erb</p>
+
+<table class="table table-striped transparent-table">
+  <% if @bugs %>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Deadline</th>
+        <th>Status</th>
+        <th>Screenshot</th>
+        <th>Bug Type</th>
+        <th>Assignment/User_Id</th>
+        <%if current_user.developer? %>
+          <th>Change Status</th>
+        <% end %>
+      </tr>
+    </thead>
+  <%else%>
+    <h2>This Project contains no bug</h2>
+  <%end%>
+  <tbody>
+    <% @bugs.each do |bug| %>
+      <tr >
+        <td ><%= bug.title %></td>
+        <td ><%= bug.description %></td>
+        <td ><%= bug.deadline %></td>
+        <td ><%= bug.status %></td>
+        <td >
+          <% if bug.screenshot.attached? %>
+            <%= image_tag(bug.screenshot, class: 'img-fluid rounded-circle', style: 'max-width: 100px; max-height: 100px;') %>
+          <% else %>
+            No Image Available
+          <% end %>
+        </td>
+        <td ><%= bug.bug_type %></td>
+        <td >
+          <% if bug.assigned_to%>
+            <%=bug.assigned_to%>
+          <% elsif current_user.developer? %>
+            <%= link_to "Assign yourself", bugs_assign_path(id: bug.id),class: "btn btn-primary"%>
+          <% else %>
+            <p>Nobody has assign himself</p>
+          <% end %>
+        </td>
+        <%if current_user.developer? %>
+          <td class= "text-center">
+            <%= link_to "Change Status", bugs_edit_status_path(id: bug.id), class: "btn btn-primary"%>
+          </td>
+        <% end %> 
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<% if current_user.qa?%>
+  <%= link_to "Create Bug", new_project_bug_path(project_id: @project.id) , class: "btn btn-secondary"%>
+<% end %>
