--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container mt-4">
+    <div class="jumbotron text-center mt-5 p-5" >
+        <h1 class="text-center">Welcome to Bugzilla App</h1>
+        <p class="text-center">Manage and track software bugs efficiently.</p>
+        <%= link_to "Projects" , projects_path,  class: "btn btn-primary"%>
+    </div>
+</div>
