--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,7 +1,6 @@
-<h1>Create a New Project</h1>
-<p><%=current_user.manager?%></p>
+<h1>Edit Project</h1>
 
-<%= form_for @project do |f| %>
+<%= form_for @project, html: { class: "form" } do |f| %>
   <div class="form-group">
     <%= f.label :name, "Project Name" %>
     <%= f.text_field :name, class: "form-control", required: true %>
@@ -12,9 +11,5 @@
     <%= f.text_area :description, class: "form-control", required: true %>
   </div>
   <br>
-
-  <%= f.submit "Create Project", class: "btn btn-primary" %>
+  <%= f.submit "Update Project", class: "btn btn-primary" %>
 <% end %>
-<br>
-
-<%= link_to "Back to Projects", projects_path, class: "btn btn-secondary" %>
