--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
+<div class="row">
+  <% if @create_project_button && current_user.manager?%>
+    <div class="alert alert-info">
+      <%= link_to "Create New Project", new_project_path, class: "btn btn-primary" %>
+    </div>
+  <% end %>
+  <% @projects.each do |project| %>
+      <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card mb-3" style="background-color: transparent;">
+          <div class="card-body">
+              <h5 class="card-title m-3"><%= project.name %></h5>
+              <p class="card-text m-3"><%= project.description %></p>
+              <%= link_to "Users", "userprojects/#{project.id}/users", class: 'btn btn-primary'%>
+              <%= link_to "Bugs", bugs_path(id: project.id) , class: "btn btn-primary" %>
+              <% if current_user.manager?%>
+                <%= link_to "Add User","userprojects/#{project.id}/add_user", class: "btn btn-primary" %>
+                <%= link_to "Edit Project", edit_project_path(id: project) ,class: "btn btn-primary" %>
+                <%= link_to "Delete Project", projects_destroy_path(project) , method: :delete ,  class: "btn btn-primary" %>
+              <%end%> 
+          </div>
+          </div>
+      </div>
+  <% end %>
+  <div>
+    <% if !@create_project_button && current_user.manager? %>
+      <%= link_to "Create New Project", new_project_path, class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
