--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,7 +23,7 @@
         <ul class="navbar-nav">
           <% if user_signed_in? %>
             <li>
-              <%= link_to "Signout", destroy_user_session_path, method: :delete, class: "nav-link" %>
+              <%= link_to "Signout", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
             </li>
           <% else %>
             <li>
