--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,11 @@
  */
 @import "bootstrap";
 
+.transparent-table {
+    background-color: transparent !important;
+  }
+  
+  .transparent-table th,
+  .transparent-table td {
+    background-color: rgba(255, 255, 255, 0.1) !important; /* Adjust the alpha value for transparency */
+  }
