--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -27,17 +27,17 @@
         <td ><%= bug.status %></td>
         <td >
           <% if bug.screenshot.attached? %>
-            <%= image_tag(bug.screenshot, class: 'img-fluid rounded-circle', style: 'max-width: 100px; max-height: 100px;') %>
+            <%= image_tag(bug.screenshot, class: 'img-fluid rounded', style: 'max-width: 100px; max-height: 100px;') %>
           <% else %>
             No Image Available
           <% end %>
         </td>
         <td ><%= bug.bug_type %></td>
         <td >
-          <% if bug.assigned_to%>
-            <%=bug.assigned_to%>
+          <% if bug.assign_to%>
+            <%=bug.assign_to%>
           <% elsif current_user.developer? %>
-            <%= link_to "Assign yourself", bugs_assign_path(id: bug.id),class: "btn btn-primary"%>
+            <%= link_to "Assign yourself", bugs_assign_path(id: bug.id,project_id: @project.id),class: "btn btn-primary"%>
           <% else %>
             <p>Nobody has assign himself</p>
           <% end %>
