--- a/app/views/bugs/edit_status.html.erb
+++ b/app/views/bugs/edit_status.html.erb
@@ -1,8 +1,10 @@
-<%= form_for @bug, url: bugs_update_status_path(@bug) ,class: 'form-horizontal' do |f| %>
+<%= form_for @bug, url: update_status_bug_path(@bug,) ,class: 'form-horizontal' do |f| %>
   <div class="form-group">
-    <%= f.label :status, class: 'control-label col-sm-2' %>
+    <%= f.label :status, class: 'control-label col-sm-2' do %>
+      Status <%= content_tag(:span, '*', class: 'required') %>
+    <% end %>
     <div class="col-sm-10">
-      <%= f.select :status, Bug.statuses.keys, {}, class: 'form-control' %>
+      <%= f.select :status, Bug.statuses.keys, { required: true }, class: 'form-control' %>
     </div>
   </div>
   <br>
