--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -37,14 +37,14 @@
           <% if bug.assign_to%>
             <%=bug.assign_to%>
           <% elsif current_user.developer? %>
-            <%= link_to "Assign yourself", bugs_assign_path(id: bug.id,project_id: @project.id),class: "btn btn-primary"%>
+            <%= link_to "Assign yourself", assign_bug_path(id: bug.id,project_id: @project.id),class: "btn btn-primary"%>
           <% else %>
             <p>Nobody has assign himself</p>
           <% end %>
         </td>
         <%if current_user.developer? %>
           <td class= "text-center">
-            <%= link_to "Change Status", bugs_edit_status_path(id: bug.id), class: "btn btn-primary"%>
+            <%= link_to "Change Status", edit_status_bug_path(id: bug.id), class: "btn btn-primary"%>
           </td>
         <% end %> 
       </tr>
