--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,15 @@
 
   <body>
     <div class= "container-fluid">
-      <%= render 'layouts/navbar' %>
-      <div class="container">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
-        <%= yield %>
-      </div>
-    </div>  
+   
+
+    <%= render 'layouts/navbar' %>
+    <div class="container">
+      <% flash.each do |key, message| %>
+        <div class="alert alert-<%= key %>"><%= message %></div>
+      <% end %>
+      <%= yield %>
+    </div>
+  </div>  
   </body>
 </html>
