--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,4 @@
+<h1 class="text-center text-uppercase mb-5">Projects</h1>
 <div class="row">
   <% if @create_project_button && current_user.manager?%>
     <div class="alert alert-info">
@@ -11,7 +12,7 @@
               <h5 class="card-title m-3"><%= project.name %></h5>
               <p class="card-text m-3"><%= project.description %></p>
               <%= link_to "Users", "user_projects/#{project.id}/users", class: 'btn btn-primary'%>
-              <%= link_to "Bugs", bugs_path(id: project.id) , class: "btn btn-primary" %>
+              <%= link_to "Bugs", bugs_path(project_id: project.id) , class: "btn btn-primary" %>
               <% if current_user.manager?%>
                 <%= link_to "Add User","user_projects/#{project.id}/add_user", class: "btn btn-primary" %>
                 <%= link_to "Edit Project", edit_project_path(id: project) ,class: "btn btn-primary" %>
