--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,14 +1,17 @@
 <h1>Create a New Project</h1>
-<p><%=current_user.manager?%></p>
-
 <%= form_for @project do |f| %>
+  <%= render 'layouts/errors', object: @project %>
   <div class="form-group">
-    <%= f.label :name, "Project Name" %>
+    <%= f.label :name, "Project Name" do %>
+      Project Name <%= content_tag(:span, '*', class: 'required') %>
+    <% end %>
     <%= f.text_field :name, class: "form-control", required: true %>
   </div>
 
   <div class="form-group">
-    <%= f.label :description, "Project Description" %>
+    <%= f.label :description, "Project Description" do %>
+      Project Description <%= content_tag(:span, '*', class: 'required') %>
+    <% end %>
     <%= f.text_area :description, class: "form-control", required: true %>
   </div>
   <br>
@@ -16,5 +19,4 @@
   <%= f.submit "Create Project", class: "btn btn-primary" %>
 <% end %>
 <br>
-
 <%= link_to "Back to Projects", projects_path, class: "btn btn-secondary" %>
