--- a/app/views/user_projects/add_user.html.erb
+++ b/app/views/user_projects/add_user.html.erb
@@ -15,7 +15,7 @@
         <td><%= user.name %></td>
         <td><%= user.user_type %></td>
         <td>
-          <%= link_to "Add User", user_projects_add_to_project_path(id: @project.id,id1: user.id), class: "btn btn-secondary" %>
+          <%= link_to "Add User", add_to_project_user_project_path(project_id: @project.id,user_id: user.id), class: "btn btn-secondary" %>
         </td>
       </tr>
     <% end %>
