* Stimulus Controllers added * Migration added for Uniqueness of UserProject each Record * controllers modified and Controller Concerns Modified for Rubocop * Models modified Accordingly

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <div class="alert alert-<%= key %>"><%= message %></div>
       <% end %>
       <%= yield %>
+      <%= turbo_frame_tag 'remote_modal'%>
     </div>
   </div>  
   </body>
