--- a/app/views/bugs/new.html.erb
+++ b/app/views/bugs/new.html.erb
@@ -1,35 +1,40 @@
-<%= form_for [@project, @bug] do |form| %>
-  <%= render 'layouts/errors', object: @bug %>
-  <div class="form-group">
-    <%= form.label :title, class: 'form-label' do %>
-      Title <%= content_tag(:span, '*', class: 'required') %>
+<%= form_for [@project, @bug], class:"needs-validation" do |form| %>
+  <div>
+    <% if @bug.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(@bug.errors.count, "error") %> prohibited this bug from being saved:</h2>
+          <ul>
+            <% @bug.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
     <% end %>
+  </div>
+  <div class="form-group">
+    <%= form.label :title, class: 'form-label' %>
     <%= form.text_field :title, class: 'form-control', required: true %>
   </div>
 
   <%= form.hidden_field :project_id, value: @project.id %>
 
   <div class="form-group">
-    <%= form.label :description, class: 'form-label'%>
-    <%= form.text_area :description, class: 'form-control'%>
+    <%= form.label :description, class: 'form-label' %>
+    <%= form.text_area :description, class: 'form-control', required: true %>
   </div>
 
   <div class="form-group">
-    <%= form.label :screenshot, class: 'form-label'%>
-    <%= form.file_field :screenshot, class: 'form-control'%>
+    <%= form.label :screenshot, class: 'form-label' %>
+    <%= form.file_field :screenshot, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-  <%= form.label :deadline, "Deadline" do %>
-    Deadline <%= content_tag(:span, '*', class: 'required') %>
-  <% end %>
-  <%= form.date_field :deadline, class: 'form-control', required: true, min: Date.today.to_s %>
-</div>
+    <%= form.label :deadline, class: 'form-label' %>
+    <%= form.date_field :deadline, class: 'form-control', min: Date.today.to_s , required: true%>
+  </div>
 
   <div class="form-group">
-    <%= form.label :bug_type, class: 'form-label' do %>
-      Bug Type <%= content_tag(:span, '*', class: 'required') %>
-    <% end %>
+    <%= form.label :bug_type, class: 'form-label' %>
     <%= form.select :bug_type, ['bug', 'feature'], { prompt: 'Select Bug type' }, class: 'form-control', required: true %>
   </div>
   <br>
