--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,12 +11,12 @@
           <div class="card-body">
               <h5 class="card-title m-3"><%= project.name %></h5>
               <p class="card-text m-3"><%= project.description %></p>
-              <%= link_to "Users", "user_projects/#{project.id}/users", class: 'btn btn-primary'%>
+              <%= link_to "Users",users_user_project_path(id: project.id) , class: 'btn btn-primary'%>
               <%= link_to "Bugs", bugs_path(project_id: project.id) , class: "btn btn-primary" %>
               <% if current_user.manager?%>
-                <%= link_to "Add User","user_projects/#{project.id}/add_user", class: "btn btn-primary" %>
+                <%= link_to "Add User",add_user_user_project_path(id: project.id), class: "btn btn-primary" %>
                 <%= link_to "Edit Project", edit_project_path(id: project) ,class: "btn btn-primary" %>
-                <%= link_to "Delete Project", project_path(id: project.id) ,  data: { turbo_method: :delete } ,  class: "btn btn-primary" %>
+                <%= link_to "Delete Project", project_path(id: project.id) ,  data: { turbo_method: :delete, confirm:'Are you sure you want to delete this project?'},class: "btn btn-primary" %>
               <%end%> 
           </div>
           </div>
@@ -24,7 +24,7 @@
   <% end %>
   <div>
     <% if !@create_project_button && current_user.manager? %>
-      <%= link_to "Create New Project", new_project_path, class: "btn btn-primary" %>
+      <%= link_to "Create New Project", new_project_path,data: {controller: 'project-model'}, class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
